--- a/utilities/utilities.csproj
+++ b/utilities/utilities.csproj
@@ -208,6 +208,8 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="DataConverterHelper.cs" />
+    <Compile Include="ExcelHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
